--- a/prepros.cfg
+++ b/prepros.cfg
@@ -20,40 +20,6 @@
           "parents": [],
           "type": "html"
         },
-        "d7a9a5e7": {
-          "id": "d7a9a5e7",
-          "path": "styles.sass",
-          "output": "styles.css",
-          "name": "styles.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "84b55a44": {
-          "id": "84b55a44",
-          "path": "styles.css",
-          "output": "styles-dist.css",
-          "name": "styles.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "e29e1e60": {
           "id": "e29e1e60",
           "path": "javascript/app.js",
@@ -85,6 +51,40 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "a4bfe505": {
+          "id": "a4bfe505",
+          "path": "css/styles.css",
+          "output": "css/styles-dist.css",
+          "name": "styles.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "3e05ead4": {
+          "id": "3e05ead4",
+          "path": "css/styles.sass",
+          "output": "css/styles.css",
+          "name": "styles.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
