--- a/prepros.cfg
+++ b/prepros.cfg
@@ -85,6 +85,38 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "e82aca54": {
+          "id": "e82aca54",
+          "path": "javascript/animatedModal.min.js",
+          "output": "javascript/animatedModal.min-dist.js",
+          "name": "animatedModal.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5922599e": {
+          "id": "5922599e",
+          "path": "css/animate.min.css",
+          "output": "css/animate.min-dist.css",
+          "name": "animate.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
