--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,26 @@
       "name": "canvas-pixel-drawing",
       "path": "",
       "files": {
+        "84747125": {
+          "id": "84747125",
+          "path": "css/parts/global.sass",
+          "output": "css/parts/global.css",
+          "name": "global.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3e05ead4"
+          ],
+          "type": "sass"
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -102,10 +122,10 @@
           "parents": [],
           "type": "javascript"
         },
-        "5922599e": {
-          "id": "5922599e",
-          "path": "css/animate.min.css",
-          "output": "css/animate.min-dist.css",
+        "659f667a": {
+          "id": "659f667a",
+          "path": "css/imp/animate.min.css",
+          "output": "css/imp/animate.min-dist.css",
           "name": "animate.min.css",
           "category": "CSS",
           "autoCompile": false,
@@ -117,6 +137,66 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "befa4000": {
+          "id": "befa4000",
+          "path": "css/parts/tools.sass",
+          "output": "css/parts/tools.css",
+          "name": "tools.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3e05ead4"
+          ],
+          "type": "sass"
+        },
+        "656b87da": {
+          "id": "656b87da",
+          "path": "css/imp/_colloro.sass",
+          "output": "css/imp/_colloro.css",
+          "name": "_colloro.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3e05ead4"
+          ],
+          "type": "sass"
+        },
+        "f99ec7c9": {
+          "id": "f99ec7c9",
+          "path": "css/parts/modals.sass",
+          "output": "css/parts/modals.css",
+          "name": "modals.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3e05ead4"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
