--- a/prepros.cfg
+++ b/prepros.cfg
@@ -106,22 +106,6 @@
           "parents": [],
           "type": "sass"
         },
-        "e82aca54": {
-          "id": "e82aca54",
-          "path": "javascript/animatedModal.min.js",
-          "output": "javascript/animatedModal.min-dist.js",
-          "name": "animatedModal.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "659f667a": {
           "id": "659f667a",
           "path": "css/imp/animate.min.css",
@@ -197,6 +181,54 @@
             "3e05ead4"
           ],
           "type": "sass"
+        },
+        "47fd8515": {
+          "id": "47fd8515",
+          "path": "javascript/remodal.js",
+          "output": "javascript/remodal-dist.js",
+          "name": "remodal.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6e3d5d05": {
+          "id": "6e3d5d05",
+          "path": "css/imp/remodal-default-theme.css",
+          "output": "css/imp/remodal-default-theme-dist.css",
+          "name": "remodal-default-theme.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "9b80abe4": {
+          "id": "9b80abe4",
+          "path": "css/imp/remodal.css",
+          "output": "css/imp/remodal-dist.css",
+          "name": "remodal.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
